# quantum-os

./: .gitignore  AtomicSwapDemo.md  CLAUDE.md  Cargo.toml  CollaborativeLearningCaseStudy.md  Collective_Optimization.md  Consensus.md  Developer_Guide.md  DiningPhilosophersDemo.md  Governance.md  GovernanceCaseStudy.md  Group_Decisions.md  Manifesto.md  MultisigDemo.md  MyRoom.md  OptimizationDemo.md  PromissoryNoteDemo.md  README.md  RendezvousDemo.md  RhoQuCalc_Macros.md  RhoQuDemo.md  Room_Best_Practices.md  SECURITY.md  SelfInquiryCaseStudy.md  SpecialistRoomCaseStudy.md  SyllogismDemo.md  User_Guide.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: ci.yml  pages.yml
crates/zfa-core/: Cargo.toml
crates/zfa-core/src/: capability.rs  history.rs  lib.rs  pauli.rs  process.rs  twist.rs  wasm.rs
scripts/: setup.sh
scripts/qos-cli/: .gitignore  README.md  agent-roles.mjs  agent.mjs  dyncap.mjs  dyncap.selftest.mjs  facilitator-advisor.mjs  facilitator.mjs  gov.mjs  loopback.mjs  optimize-demo.mjs  package.json  pushlemma.mjs  qos-cli.mjs  qos-daemon.mjs  qospeer.mjs  run-agents.sh  selftest.mjs  stop-agents.sh  zfa.mjs
